<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment2"
    android:background="@color/jet">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/time_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_time"
            android:inputType="time"
            android:textAlignment="center"
            android:textSize="96sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35"
            android:textColor="@color/azure"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_counter"
            app:layout_constraintVertical_bias="0.95
">

            <Button
                android:id="@+id/start_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/start"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

            <Button
                android:id="@+id/pause_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:padding="15dp"
                android:text="@string/pause"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

            <Button
                android:id="@+id/stop_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/stop"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/time_counter"
            app:layout_constraintEnd_toEndOf="@+id/time_counter"
            app:layout_constraintStart_toStartOf="@+id/time_counter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/plus_10_minute_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="36sp"
                android:text="@string/plus"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

            <Button
                android:id="@+id/plus_1_minute_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="36sp"
                android:text="@string/plus"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

            <Space
                android:layout_width="24dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/plus_10_second_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="36sp"
                android:text="@string/plus"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

            <Button
                android:id="@+id/plus_1_second_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="36sp"
                android:text="@string/plus"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/time_counter"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/time_counter"
            app:layout_constraintTop_toBottomOf="@+id/time_counter"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/minus_10_minute_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="36sp"
                android:text="@string/minus"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

            <Button
                android:id="@+id/minus_1_minute_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="36sp"
                android:text="@string/minus"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

            <Space
                android:layout_width="24dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/minus_10_second_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="36sp"
                android:text="@string/minus"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

            <Button
                android:id="@+id/minus_1_second_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="36sp"
                android:text="@string/minus"
                android:textColor="@color/rich_black"
                android:backgroundTint="@color/azure"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>